css/style.css
*{
  margin: 0;
  padding: 0;
}

.terminal{
  width: 415px;
  max-width: calc(100%);
  height: 350px;
  max-height: 350px;
  padding: 6px 12px;
  border: 1px solid black;
  border-top: 0;
  resize: none;
  outline: none;
  font-family: 'Inconsolata', monospace;
  font-size: 14px;
  overflow: auto;
  margin-top: -22px;

}

.flex-center{
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  height: 100vh;
  width: 100%;
}

